# ai-workflow

./: .gitignore  config.example.yaml
.claude/: settings.json  settings.local.json
go/: go.mod  go.sum
go/internal/jobs/: email.go  webhook.go
go/internal/queue/: dequeue.go  enqueue.go  redis.go
go/pkg/config/: config.go
internal/jobs/: job.go
passman/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
passman/capabilities/: default.json
passman/src/: main.rs
passman/src/cli/: commands.rs  mod.rs
passman/src/crypto/: decrypt.rs  encrypt.rs  key_derivation.rs  mod.rs
passman/src/gui/: app.rs
passman/src/models/: entry.rs
passman/src/vault/: storage.rs  vault.rs
passman/ui/: app.js  index.html  style.css
